@@ -1,7 +1,8 @@
 2004-01-19  Werner Koch  <wk@gnupg.org>
 
-	* cms.c (build_signed_data_attributes): Include the messageDigest
-	last for the sake of a buggy proprietary implementation.
+	* cms.c (build_signed_data_attributes): Argh. We need to sort the
+	attributes.
+	(compare_attrarray): New.
 
 2003-12-19  Werner Koch  <wk@gnupg.org>
 
